--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- Title of Application -->
     <title>Tim Cook - Portfolio</title>
   </head>
 
   <body>
+    <!-- Navigation Bar -->
     <nav class="navbar">
       <div>Tim Cook</div>
       <div class="navbar--links">
@@ -18,6 +20,7 @@
         <a href="#contact-me"> Contact Me </a>
       </div>
     </nav>
+    <!-- Portrait Image -->
     <div class="layout">
       <div class="about--container">
         <img
@@ -26,6 +29,7 @@
           width="200"
           height="200"
         />
+        <!-- About Me section -->
         <div id="about-me">
           <h1>About me</h1>
           <p>
@@ -39,6 +43,7 @@
           </p>
         </div>
       </div>
+      <!-- Links to deployed applications -->
       <div id="work">
         <h1>Work</h1>
         <a href="https://tcook160.github.io/Business-Technical-Needs"
@@ -55,6 +60,7 @@
           style="width: 200px; height: 200px"
         />
       </div>
+      <!-- Link to Resume -->
       <div id="resume">
         <h1>Resume</h1>
         <a href="./assets/resume.pdf"
@@ -65,6 +71,7 @@
             style="width: 200px; height: 200px"
         /></a>
       </div>
+      <!-- Contact Info on bottom of page-->
       <div id="contact-me">
         <h1>Contact Me</h1>
         <div class="contact-me-container">
