Fixing html file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="about--container">
         <img
           class="portrait"
-          src="./assets/images/me.jpg"
+          src="./assets/images/me.jpeg"
           width="200"
           height="200"
         />
