Adding link to "Craft Notes" group project

--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
             alt="Business Technical Needs"
             style="width: 400px; height: 400px"
         /></a>
-        <img
-          class="work"
-          src="./assets/images/Under_Construction.jpeg"
-          alt="Future Deployed Application"
-          style="width: 200px; height: 200px"
-        />
+        <a href="https://tcook160.github.io/Craft-Notes"
+          ><img
+            class="work"
+            src="./assets/images/craft_notes.png"
+            alt="Craft Notes"
+            style="width: 400px; height: 400px"
+        /></a>
       </div>
       <!-- Link to Resume -->
       <div id="resume">
