Adding wallet watchdog app

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
             alt="Craft Notes"
             style="width: 400px; height: 400px"
         /></a>
+        <a href="https://wallet-watchdog-tim.herokuapp.com"
+          ><img
+            class="work"
+            src="./assets/images/wallet_watchdog.png"
+            alt="Wallet Watchdog"
+            style="width: 400px; height: 400px"
+        /></a>
       </div>
       <!-- Link to Resume -->
       <div id="resume">
